# astroport-core

./: Cargo.toml
contracts/pair/src/: contract.rs
contracts/pair/tests/: integration.rs
contracts/router/tests/: router_integration.rs
contracts/tokenomics/incentives/src/: error.rs  execute.rs  utils.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: deploy_sequence.rs  incentives_setup_pools.rs  multi_hop_routing.rs  paused_via_factory.rs
planning/: 00-overview.md  11-incentives-and-gauges.md
